# Formation

./: .deepsource.toml  .gitignore  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.md  azure-pipelines.yml  buildtools.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  win_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: pypi-publish.yml  python-package.yml
assets/: _build.py
docs/: callback.rst  callbacks.rst  canvas.rst  component_pane.rst  component_tree.rst  conf.py  custom_properties.rst  custom_widgets.rst  events.rst  formation.rst  hoverset.rst  index.rst  installation.rst  make_html.bat  menu.rst  quickstart.rst  requirements.txt  studio.rst  studio_window.rst  themes.rst  variables.rst
docs/examples/: CanvasEvents.rst  calculator.rst
docs/formation/: loader.rst  utils.rst  xml.rst
docs/hoverset/: dialogs.rst  menu.rst  widgets.rst
docs/studio/: architecture.rst  geometry.rst
examples/CanvasEvents/: Canvas_example.json  Canvas_example.py
examples/calculator/: calculator.py  calculator.xml
formation/: __init__.py  __main__.py  callback_parse.py  loader.py  meth.py  themes.py  utils.py  xml.py
formation/formats/: __init__.py  _base.py  _json.py  _xml.py
formation/handlers/: __init__.py  command.py  image.py  layout.py  misc.py  scroll.py
formation/tests/: support.py  test_bindings.py  test_canvas.py  test_creation.py  test_custom_property.py  test_image.py  test_json.py  test_layout.py  test_loading.py  test_menu.py  test_meth.py  test_toplevel.py  test_variables.py  test_xml.py
hoverset/: catalogue.py  data.bak  main.py
hoverset/apps/: __init__.py
hoverset/data/: actions.py  i18n.py  image.bak  image.dir  images.py  keymap.py  utils.py  (+1 more)
studio/: README.md  __init__.py  __main__.py  cli.py  component_tree.py  components.py  context.py  design.py  designpad.py  geometry.py  highlight.py  i18n.py  launcher.py  layouts.py  main.py  preferences.py  properties.py  resource_loader.py  selection.py  updates.py
(+146 files in other folders)
